--- a/.env.example.txt
+++ b/.env.example.txt
@@ -1,8 +1,7 @@
 # RapidMandados Environment Configuration
 
-# MongoDB Configuration
-MONGO_URL=mongodb://localhost:27017
-DB_NAME=rapidmandados_prod
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgresql://user:password@localhost:5432/rapidmandados_db
 
 # Application Configuration
 SECRET_KEY=your-super-secret-jwt-key-here
@@ -15,13 +14,12 @@ SERVICE_FEE=15.00
 PREMIUM_SUBSCRIPTION_MONTHLY=200.00
 
 # Email Configuration (Optional - using SendGrid as an example)
-SENDGRID_API_KEY=your_sendgrid_api_key
+# Replace with your actual email sending details for production
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=noreply@rapidmandados.com
+EMAIL_PASSWORD=your_email_password
 EMAIL_FROM=noreply@rapidmandados.com
-# If you prefer generic SMTP, uncomment these and comment SendGrid:
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=noreply@rapidmandados.com
-# SMTP_PASS=your-email-password
 
 # SMS Configuration (Optional)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
