--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,12 @@
-MONGO_URL=mongodb://localhost:27017
-DB_NAME=rapidmandados_production
+DATABASE_URL=postgresql://user:password@localhost:5432/rapidmandados_dev
 SECRET_KEY=rapidmandados-secret-key-production-2025
 OWNER_EMAIL=leonardo.luna@rapidmandados.com
 OWNER_NAME=LEONARDO LUNA
 DEFAULT_COMMISSION_RATE=0.15
 SERVICE_FEE=15.0
 PREMIUM_SUBSCRIPTION_MONTHLY=200.0
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=noreply@rapidmandados.com
+EMAIL_PASSWORD=your_email_password
+EMAIL_FROM=RapidMandados <noreply@rapidmandados.com>
